[Add] Get chats from current users
